# Iran-airspace-crisis

./: .gitignore  CHANGELOG.md  CONVENTIONS.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements.txt  streamlit_app.py  train_demo.py
.github/workflows/: ci.yml
.streamlit/: config.toml
models/: demo_countries.json  iran_demo.pkl
notebooks/: 01_eda.ipynb  02_modelling.ipynb
src/: config.py
src/api/: app.py
src/data/: pipeline.py
src/features/: build_features.py
src/models/: predict.py  train.py
src/visualization/: plots.py
tests/: test_features.py  test_pipeline.py
